--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
 <div class="container-fluid about ">
     
     <div class="row d-flex justify-content-around">
-      <div class="col-xl-4 col-lg-8 ">
-          <img src="./images/EgN_wkTXYAIAcGG.jfif" class="border border-2 border-primary ps-md-0 ps-sm-5 mt-sm-5 pic_holder float-end ">
+      <div class="col-xl-4 col-lg-8">
+          <img src="./images/EgN_wkTXYAIAcGG.jfif" class="ps-md-0 pic_holder float-md-end float-sm-none ">
             <p class="border border-2 border-warning col-xl-4 col-lg-4 col-md-6 mx-5 text_box "> Born and raised in one of the largest Puerto Rican communities in America, WRDS has always been surrounded by music and   
                 culture. He was drawn to the rhythm and poetry of hip-hop, and began writing lyrics as a way to express himself. Over the years, he has developed a unique style that is 
                 both ahead of its time and deeply rooted in tradition.</p>
       </div>
 
       <div class="col-xl-4 col-lg-8 ">
-          <img src="./images/EYlPmf0XsAI-bmS.jfif" class="border border-2 border-primary ps-md-0 ps-sm-5 mt-sm-5 pic_holder float-end ">
+          <img src="./images/EYlPmf0XsAI-bmS.jfif" class="ps-md-0 pic_holder float-md-end float-sm-none ">
             <p class="border border-2 border-warning col-xl-4 col-lg-4 col-md-6 mx-5 text_box"> As a prolific songwriter, he is always pushing himself to create innovative music, blending classic hip-hop with modern   
                 production techniques. A Chicago emcee through and through, he never quits and always raises the bar for himself, constantly striving to improve and evolve as an artist 
             </p>
@@ -91,7 +91,7 @@
 
         <div class="col-lg-5 col-md-5 col-sm-4 pe-md-5">
             <iframe class="music-about" style="border-radius:12px" src="https://open.spotify.com/embed/track/52tR7PvmK9I8uAvcB4A85m?utm_source=generator" width="75%"
-                  height="140"frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+                  height="140" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
             </iframe>
         </div>
 
@@ -102,8 +102,24 @@
     <footer class="container-fluid ">
         <div>
             <nav class="navbar mb-1 bg-body-tertiary border border-2 border-secondary">
-                <div class="container-fluid">
-                <span class="navbar-brand mb-0 h1">WRDS</span>
+                <div class="container-fluid ">
+                <span class="navbar-brand mb-0 h1 ">WRDS</span>
+
+                  <ul class="nav justify-content-center">
+                    <li class="nav-item">
+                      <a class="nav-link " href="#"> Instagram </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Twitter</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#"> Spotify </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">SoundCloud</a>
+                    </li>
+                  </ul>
+
                 </div>
             </nav>
         </div>
